# GazeBot

./: .gitignore  .gitmodules  README.md  env_setup.sh  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
config/agent/: gaze.yaml  manipulation.yaml
config/env/: tong.yaml  tongsim.yaml
gazebot/: agent.py  dataset.py  env_wrapper.py  test.py  train.py  utils.py
gazebot/models/: gaze.py  manipulation.py  point_transformer.py  transformer.py
notebooks/: visualize_gaze.ipynb  visualize_localbc_loss.ipynb
scripts/: run.py  save_localbc_loss.py  train_gaze.py  train_localbc.py  train_manipulation.py
