[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gazebot"
version = "1.0.0"
description = ""
authors = [
  { name = "Ryo Takizawa", email = "takizawa@isi.imi.i.u-tokyo.ac.jp" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]